Update of 'Tutorials': simplification of the package used as an example to show how to define the colors of a company.

--- a/Tutorials/LaTeX_for_companies__How_to_build_your_identity/Step_01__Colors/_04__Test_your_package/unit-test_text_pdflatex.tex
+++ b/Tutorials/LaTeX_for_companies__How_to_build_your_identity/Step_01__Colors/_04__Test_your_package/unit-test_text_pdflatex.tex
@@ -18,7 +18,7 @@
 \usepackage[T1]{fontenc}
 
 
-% Package Under Test (PUT)
+% Package Under Test
 % ------------------
 \usepackage{umons-colors}
 
@@ -38,22 +38,13 @@
 	Testing defined global UMONS colors\ldots
 	\begin{itemize}
 		\item \textcolor{umonsRed}{umonsRed},
-		\item \textcolor{umonsBlue}{umonsBlue},
-		\item \textcolor{umonsGray}{umonsGray},
-		\item \textcolor{umonsYellow}{umonsYellow}.
+		\item \textcolor{umonsBlue}{umonsBlue}.
 	\end{itemize}
 	
-	Testing defined colours for UMONS faculties\ldots
+	Testing defined colors for UMONS faculties\ldots
 	\begin{itemize}
-		\item Architecture: \textcolor{umonsColorFau}{umonsColorFau} or \textcolor{umonsColorArchi}{umonsColorArchi},
-		\item Medicine: \textcolor{umonsColorFmp}{umonsColorFmp} or \textcolor{umonsColorMedic}{umonsColorMedic},
 		\item Engineering: \textcolor{umonsColorFpms}{umonsColorFpms} or \textcolor{umonsColorFeng}{umonsColorFeng},
-		\item Psychology: \textcolor{umonsColorFpse}{umonsColorFpse} or \textcolor{umonsColorFpe}{umonsColorFpe} or \textcolor{umonsColorPsy}{umonsColorPsy},
-		\item Science: \textcolor{umonsColorFs}{umonsColorFs} or \textcolor{umonsColorFsci}{umonsColorFsci},
-		\item Translation: \textcolor{umonsColorFti}{umonsColorFti} or \textcolor{umonsColorEii}{umonsColorEii},
-		\item Economy: \textcolor{umonsColorFweg}{umonsColorFweg} or \textcolor{umonsColorWawa}{umonsColorWawa},
-		\item Social Sciences: \textcolor{umonsColorShs}{umonsColorShs}, and
-		\item Law: \textcolor{umonsColorLaw}{umonsColorLaw}.
+		\item Science: \textcolor{umonsColorFs}{umonsColorFs} or \textcolor{umonsColorFsci}{umonsColorFsci}.
 	\end{itemize}
 
 
